Модель юзера + подтягивание данных о нем из вк
Создание головного index.html со стилями, от которого
наследуются остальные шаблоны

Интеграции кнопки вк на сайт

Был добавлен контекст менеджер, который делает
доступным request в шаблонизатор

Фикс пайлинт файла (теперь он устанавливает все нужные библиотеки)

Был добавлен контекст менеджер, который делает
доступным request в шаблонизато

--- a/core/static/core/css/index.css
+++ b/core/static/core/css/index.css
@@ -1,15 +1,13 @@
 nav {
-    /*background: #4ac1f7;*/
     background-image: url("../img/nav_fon_small.png");
     height: 223px;
     width: 1920px;
-    /*height: 100px;*/
-    /*width: 100px;*/
 }
 
 .wrapper {
-    background-image:url("../img/inf fon.jpg");
+    background-image: url("../img/inf fon.jpg");
     background-attachment: fixed;
+    min-height: 80vh;
 }
 
 .footer {
