--- a/map_manager/static/map_manager/css/map.css
+++ b/map_manager/static/map_manager/css/map.css
@@ -51,7 +51,7 @@
 .memory-manager__action-button {
     width: 90%;
     font-size: 1.5em;
-    height: 100px;
+    min-height: 100px;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -64,4 +64,5 @@
     text-align: center;
     margin-bottom: 30px;
     padding: 10px;
+    flex-direction: column;
 }
