--- a/map_manager/templates/map_manager/test.html
+++ b/map_manager/templates/map_manager/test.html
@@ -62,24 +62,13 @@
         <div class="places-column">
             <div class="places-column__item">
                 <div class="places-column__tittle">
-                    Место для прекрасного воспоминания
+                    “У вас нет ни одного воспоминания
                 </div>
                 <div class="places-column__img">
                     <img src="" alt="">
                 </div>
                 <div class="places-column__content">
-                    Здесь могла бы быть отличное воспоминание
-                </div>
-            </div>
-            <div class="places-column__item">
-                <div class="places-column__tittle">
                     Место для прекрасного воспоминания
-                </div>
-                <div class="places-column__img">
-                    <img src="" alt="">
-                </div>
-                <div class="places-column__content">
-                    Здесь могла бы быть отличное воспоминание
                 </div>
             </div>
         </div>
