--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 <div class="nav">
-    <div class="logo-container">
+    <a href="{% url 'map_manager:test' %}" class="logo-container">
         <img src="{% static 'core/img/logo.png' %}" alt="оч крутой лого, которому не суждено прогрузиться">
-    </div>
+    </a>
     {% if  request.user.is_authenticated %}
         <a href="{% url 'auth_vk:login' %}" class="profile">
             <div class="profile__ava">
