Рендер воспоминаний пользователя на карте
Фронт: Подгрузка мини иконок юзера, интерактивная свзяь с лентой воспоминаний + авто скрол при нажатии на балуны

Функция серилизатор воспоминаний юзера get_place_data

--- a/map_manager/templates/map_manager/test.html
+++ b/map_manager/templates/map_manager/test.html
@@ -16,6 +16,76 @@
         let myMap = null;
         let memoryCoords = null;
 
+        function loadMemoriesDataFromServer() {
+            /**
+             * Подгружает и рендерит точки на карту
+             */
+            function addPlaceMarkMemoriToMap(coords, memories_id, imageHrf = null) {
+                /**
+                 * Добавляет на карту балун с картинкой ( если есть ) или обычный
+                 * указатель в противном случае. Создает обработчик, чтобы при нажатии
+                 * на хинт лента листалась к воспоминанию
+                 * coords - массив из 2 координат
+                 * memories_id - id воспоминания. Без #
+                 * imageHrf - ссылка на картинку /media/img/...
+                 */
+                let balun = null;
+                if (imageHrf) {
+                    const imageLayer = {
+                        iconLayout: 'default#imageWithContent',
+                        iconImageOffset: [-25, -50],
+                        iconContentLayout: ymaps.templateLayoutFactory.createClass(
+                            '<div style="width: 40px; border: #0f0f0f 2px solid; overflow: hidden; height: 60px; ' +
+                            'background-image: url(' + imageHrf + '); background-size: cover; ' +
+                            'background-repeat: no-repeat;' +
+                            'background-position: center; border-radius: 5px 0 5px 0;"></div>'
+                        )
+                    }
+                    balun = new ymaps.Placemark(coords, {
+                        hintContent: 'Кликните, чтобы перейти к воспоминанию '
+                    }, imageLayer)
+                } else {
+                    balun = new ymaps.Placemark(coords, {
+                        hintContent: 'Кликните, чтобы перейти к воспоминанию '
+                    })
+                }
+
+
+                balun.events.add('click', () => {
+                    /**
+                     * Обработчик, который лестает ленту и запрещает листать экран
+                     */
+                    if (window.location.hash.slice(1) === memories_id) {
+                        const currentScrollY = window.scrollY;
+                        window.location.hash = 'firs-el'
+                        window.scrollTo({
+                            top: currentScrollY,
+                        });
+                    } else {
+                        const currentScrollY = window.scrollY;
+                        window.location.hash = memories_id
+                        window.scrollTo({
+                            top: currentScrollY,
+                        });
+                    }
+                })
+
+                myMap.geoObjects.add(balun);
+            }
+
+            const dataUrl = 'https://sabaton-enjoyer.online/map/get-place-marks-data-list/'
+            fetch(dataUrl)
+                .then(response => response.json())
+                .then(jsonData => {
+                    jsonData.forEach((item) => {
+                        const coords = [item.coord1, item.coord2]
+                        const memories_id = 'memories_' + item.id
+                        addPlaceMarkMemoriToMap(coords, memories_id, item.image)
+                    })
+                })
+
+        }
+
         function init() {
             myMap = new ymaps.Map("map", {
                 center: [55.76, 37.64],
@@ -30,17 +100,17 @@
                 let coords = e.get('coords');
                 actionAfterPlaceMarkChangePos(coords)
             });
+
+            loadMemoriesDataFromServer()
         }
 
         function addPlaceMark(coords) {
             balun = new ymaps.Placemark(coords, {
                 iconContent: 'Место для воспоминания',
-                {#balloonContentBody: '<div><h2>Заголовок</h2><p>Это содержимое балуна с <strong>HTML</strong> разметкой.</p></div>'#}
             }, {
                 balloonPanelMaxMapArea: 0,
                 draggable: "true",
                 preset: "islands#blueStretchyIcon",
-                {#openEmptyBalloon: true#}
             })
 
             balun.events.add('dragend', function (e) {
@@ -122,7 +192,6 @@
             closeForm()
 
             newMemoriesButton.addEventListener('click', () => {
-
                 openForm()
             })
 
@@ -141,7 +210,6 @@
         }
 
         function validateInputData() {
-
             /**
              * Валидирует данные, введенные юзером, в будущем должно
              * 1) выводить подсказки, что не так
@@ -166,6 +234,7 @@
     </div>
     <div class="content">
         <div class="places-column">
+            <div id="firs-el"></div>
             <div class="places-column__item" id="inputForm">
                 <button class="close-button">
                     X
